--- a/src/app.css
+++ b/src/app.css
@@ -10,9 +10,9 @@
 */
 
 body {
-    line-height: 1.7em;
     color: #7f8c8d;
     font-size: 13px;
+    background-color: teal
 }
 
 h1,
@@ -189,11 +189,10 @@ a.pure-button-primary {
 .content-wrapper {
     /* These styles are required for the "scroll-over" effect */
     position: absolute;
-    top: 50px;
+    top: 75px;
     width: 100%;
     min-height: 12%;
     z-index: 2;
-    background: white;
 }
 
 /* We want to give the content area some more padding */
@@ -292,4 +291,49 @@ a.pure-button-primary {
     .splash-head {
         font-size: 300%;
     }
+}
+
+div.card {
+    position: relative;
+    border-bottom-left-radius: 25px;
+    border-bottom-right-radius: 25px;
+    margin: 10px 10px 10px 10px;
+    padding: 10px 10px 10px 10px;
+    border: 1px solid black;
+    box-shadow: #111;
+    height: 150px;
+    background-color: white;
+    box-shadow: 5px 5px #AA888888
+}
+
+div.card div.name {
+    line-height: 0.9em;
+    color: black;
+    height: 100%;
+    width: 100%;
+    font-size: 35pt;
+}
+
+div.card div.members {
+    color: black;
+    position: absolute;
+    bottom: 5px;
+    right: 25px;
+    text-align: right;
+    font-size: 14pt;
+    width: 100%;
+    vertical-align: bottom;
+}
+
+div.card div.accent {
+    height: 10px;
+    position: relative;
+    top: -10px;
+    right: -10px;
+}
+
+.square-button {
+    height: 25px;
+    width: 25px;
+    padding: 0;
 }
