--- a/src/app.css
+++ b/src/app.css
@@ -1,7 +1,7 @@
 * {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 /*
@@ -10,24 +10,18 @@
 */
 
 body {
-    color: #7f8c8d;
-    font-size: 13px;
-    background-color: teal
+  color: #7f8c8d;
+  font-size: 13px;
+  background-color: teal
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-label {
-    color: #34495e;
+h1, h2, h3, h4, h5, h6, label {
+  color: #34495e;
 }
 
 .pure-img-responsive {
-    max-width: 100%;
-    height: auto;
+  max-width: 100%;
+  height: auto;
 }
 
 /*
@@ -36,16 +30,16 @@ label {
 */
 
 .l-box {
-    padding: 1em;
+  padding: 1em;
 }
 
 .l-box-lrg {
-    padding: 2em;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  padding: 2em;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 .is-center {
-    text-align: center;
+  text-align: center;
 }
 
 /*
@@ -54,17 +48,17 @@ label {
 */
 
 .pure-form label {
-    margin: 1em 0 0;
-    font-weight: bold;
-    font-size: 100%;
+  margin: 1em 0 0;
+  font-weight: bold;
+  font-size: 100%;
 }
 
 .pure-form input[type] {
-    border: 2px solid #ddd;
-    box-shadow: none;
-    font-size: 100%;
-    width: 100%;
-    margin-bottom: 1em;
+  border: 2px solid #ddd;
+  box-shadow: none;
+  font-size: 100%;
+  width: 100%;
+  margin-bottom: 1em;
 }
 
 /*
@@ -73,17 +67,17 @@ label {
 */
 
 .pure-button {
-    background-color: #1f8dd6;
-    color: white;
-    padding: 0.5em 2em;
-    border-radius: 5px;
+  background-color: #1f8dd6;
+  color: white;
+  padding: 0.5em 2em;
+  border-radius: 5px;
 }
 
 a.pure-button-primary {
-    background: white;
-    color: #1f8dd6;
-    border-radius: 5px;
-    font-size: 120%;
+  background: white;
+  color: #1f8dd6;
+  border-radius: 5px;
+  font-size: 120%;
 }
 
 /*
@@ -92,41 +86,40 @@ a.pure-button-primary {
 */
 
 .home-menu {
-    padding: 0.5em;
-    text-align: center;
-    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.10);
+  padding: 0.5em;
+  text-align: center;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.10);
 }
 
 .home-menu {
-    background: #2d3e50;
+  background: #2d3e50;
 }
 
 .pure-menu.pure-menu-fixed {
-    /* Fixed menus normally have a border at the bottom. */
-    border-bottom: none;
-    /* I need a higher z-index here because of the scroll-over effect. */
-    z-index: 4;
+  /* Fixed menus normally have a border at the bottom. */
+  border-bottom: none;
+  /* I need a higher z-index here because of the scroll-over effect. */
+  z-index: 4;
 }
 
 .home-menu .pure-menu-heading {
-    color: white;
-    font-weight: 400;
-    font-size: 120%;
+  color: white;
+  font-weight: 400;
+  font-size: 120%;
 }
 
 .home-menu .pure-menu-selected a {
-    color: white;
+  color: white;
 }
 
 .home-menu a {
-    color: #6FBEF3;
+  color: #6FBEF3;
 }
 
-.home-menu li a:hover,
-.home-menu li a:focus {
-    background: none;
-    border: none;
-    color: #AECFE5;
+.home-menu li a:hover, .home-menu li a:focus {
+  background: none;
+  border: none;
+  color: #AECFE5;
 }
 
 /*
@@ -135,50 +128,50 @@ a.pure-button-primary {
 */
 
 .splash-container {
-    background: #1f8dd6;
-    z-index: 1;
-    overflow: hidden;
-    /* The following styles are required for the "scroll-over" effect */
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    position: fixed !important;
+  background: #1f8dd6;
+  z-index: 1;
+  overflow: hidden;
+  /* The following styles are required for the "scroll-over" effect */
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  position: fixed !important;
 }
 
 .splash {
-    /* absolute center .splash within .splash-container */
-    width: 80%;
-    height: 50%;
-    margin: auto;
-    position: absolute;
-    top: 100px;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    text-align: center;
-    text-transform: uppercase;
+  /* absolute center .splash within .splash-container */
+  width: 80%;
+  height: 50%;
+  margin: auto;
+  position: absolute;
+  top: 100px;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  text-align: center;
+  text-transform: uppercase;
 }
 
 /* This is the main heading that appears on the blue section */
 
 .splash-head {
-    font-size: 20px;
-    font-weight: bold;
-    color: white;
-    border: 3px solid white;
-    padding: 1em 1.6em;
-    font-weight: 100;
-    border-radius: 5px;
-    line-height: 1em;
+  font-size: 20px;
+  font-weight: bold;
+  color: white;
+  border: 3px solid white;
+  padding: 1em 1.6em;
+  font-weight: 100;
+  border-radius: 5px;
+  line-height: 1em;
 }
 
 /* This is the subheading that appears on the blue section */
 
 .splash-subhead {
-    color: white;
-    letter-spacing: 0.05em;
-    opacity: 0.8;
+  color: white;
+  letter-spacing: 0.05em;
+  opacity: 0.8;
 }
 
 /*
@@ -187,59 +180,59 @@ a.pure-button-primary {
 */
 
 .content-wrapper {
-    /* These styles are required for the "scroll-over" effect */
-    position: absolute;
-    top: 75px;
-    width: 100%;
-    min-height: 12%;
-    z-index: 2;
+  /* These styles are required for the "scroll-over" effect */
+  position: absolute;
+  top: 75px;
+  width: 100%;
+  min-height: 12%;
+  z-index: 2;
 }
 
 /* We want to give the content area some more padding */
 
 .content {
-    padding: 1em 1em 3em;
+  padding: 1em 1em 3em;
 }
 
 /* This is the class used for the main content headers (<h2>) */
 
 .content-head {
-    font-weight: 400;
-    text-transform: uppercase;
-    letter-spacing: 0.1em;
-    margin: 2em 0 1em;
+  font-weight: 400;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+  margin: 2em 0 1em;
 }
 
 /* This is a modifier class used when the content-head is inside a ribbon */
 
 .content-head-ribbon {
-    color: white;
+  color: white;
 }
 
 /* This is the class used for the content sub-headers (<h3>) */
 
 .content-subhead {
-    color: #1f8dd6;
+  color: #1f8dd6;
 }
 
 .content-subhead i {
-    margin-right: 7px;
+  margin-right: 7px;
 }
 
 /* This is the class used for the dark-background areas. */
 
 .ribbon {
-    background: #2d3e50;
-    color: #aaa;
+  background: #2d3e50;
+  color: #aaa;
 }
 
 /* This is the class used for the footer */
 
 .footer {
-    background: #111;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
+  background: #111;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
 }
 
 /*
@@ -249,35 +242,35 @@ a.pure-button-primary {
 */
 
 @media (min-width: 48em) {
-    /* We increase the body font size */
-    body {
-        font-size: 16px;
-    }
-    /* We can align the menu header to the left, but float the
+  /* We increase the body font size */
+  body {
+    font-size: 16px;
+  }
+  /* We can align the menu header to the left, but float the
   menu items to the right. */
-    .home-menu {
-        text-align: left;
-    }
-    .home-menu ul {
-        float: right;
-    }
-    /* We increase the height of the splash-container */
-    /*    .splash-container {
+  .home-menu {
+    text-align: left;
+  }
+  .home-menu ul {
+    float: right;
+  }
+  /* We increase the height of the splash-container */
+  /*    .splash-container {
       height: 500px;
   }*/
-    /* We decrease the width of the .splash, since we have more width
+  /* We decrease the width of the .splash, since we have more width
   to work with */
-    .splash {
-        width: 50%;
-        height: 50%;
-    }
-    .splash-head {
-        font-size: 250%;
-    }
-    /* We remove the border-separator assigned to .l-box-lrg */
-    .l-box-lrg {
-        border: none;
-    }
+  .splash {
+    width: 50%;
+    height: 50%;
+  }
+  .splash-head {
+    font-size: 250%;
+  }
+  /* We remove the border-separator assigned to .l-box-lrg */
+  .l-box-lrg {
+    border: none;
+  }
 }
 
 /*
@@ -287,53 +280,85 @@ a.pure-button-primary {
 */
 
 @media (min-width: 78em) {
-    /* We increase the header font size even more */
-    .splash-head {
-        font-size: 300%;
-    }
+  /* We increase the header font size even more */
+  .splash-head {
+    font-size: 300%;
+  }
 }
 
 div.card {
-    position: relative;
-    border-bottom-left-radius: 25px;
-    border-bottom-right-radius: 25px;
-    margin: 10px 10px 10px 10px;
-    padding: 10px 10px 10px 10px;
-    border: 1px solid black;
-    box-shadow: #111;
-    height: 150px;
-    background-color: white;
-    box-shadow: 5px 5px #AA888888
+  position: relative;
+  border-bottom-left-radius: 25px;
+  border-bottom-right-radius: 25px;
+  margin: 10px 10px 10px 10px;
+  padding: 10px 10px 10px 10px;
+  border: 1px solid black;
+  box-shadow: #111;
+  height: 150px;
+  background-color: white;
+  box-shadow: 5px 5px #AA888888;
 }
 
 div.card div.name {
-    line-height: 0.9em;
-    color: black;
-    height: 100%;
-    width: 100%;
-    font-size: 35pt;
+  line-height: 0.9em;
+  color: black;
+  height: 100%;
+  width: 100%;
+  font-size: 35pt;
 }
 
 div.card div.members {
-    color: black;
-    position: absolute;
-    bottom: 5px;
-    right: 25px;
-    text-align: right;
-    font-size: 14pt;
-    width: 100%;
-    vertical-align: bottom;
+  color: black;
+  position: absolute;
+  bottom: 5px;
+  right: 25px;
+  text-align: right;
+  font-size: 14pt;
+  width: 100%;
+  vertical-align: bottom;
 }
 
 div.card div.accent {
-    height: 10px;
-    position: relative;
-    top: -10px;
-    right: -10px;
+  height: 10px;
+  position: relative;
+  top: -10px;
+  right: -10px;
 }
 
 .square-button {
-    height: 25px;
-    width: 25px;
+  height: 25px;
+  width: 25px;
+  padding: 0;
+}
+
+@media print {
+  body {
+    background: none;
+  }
+  #page {
+    width: 100%;
+    margin: 0;
     padding: 0;
+    background: none;
+  }
+  #header, #menu-bar, #sidebar, h2#postcomment, form#commentform, #footer {
+    display: none;
+  }
+  .entry a:after {
+    content: " [" attr(href) "] ";
+  }
+  .dont-print {
+    display: none !important;
+  }
+  .content-wrapper {
+    top: 0;
+    position: unset;
+  }
+  div.cardtainer {
+    widows: 0;
+    page-break-before: always;
+    page-break-inside: avoid;
+    break-inside: avoid;
+    width: 50% !important;
+  }
 }
